# snake_game

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/board/: board.c  board.h
lib/port/: port.c  port.h
snake-exe/: CMakeLists.txt  main.c
